--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 			<h4>(12/20/2016) New Year, New .me </h4>
 			<ul>
 				<li>Finally got around to updating and putting content to the main home page. More to come. It still seems dull. </li>
-				<li>Changed up / updated minor UI things. Made the contact tab a table. Expanded the navigation box. Accent color is now (0,0,255)</li>
-				<li>Wasted a lot of time trying to make or figure out a simple and modern image to place inside the nav box.</li>
+				<li>Updated minor UI things. Made the contact tab a table. Expanded the navigation box. Accent color is now (0,0,255)</li>
+				<li>Wasted a lot of time trying to make / figure out a simple and modern image to place inside the nav box.</li>
 			</ul>
 		</div>
 	
@@ -58,7 +58,7 @@
 			<a class="twitter-timeline" 
 	   data-theme="dark" 
 	   href="https://twitter.com/devlontecron" 
-			   data-tweet-limit="1"> 
+			   data-tweet-limit="1" %0000FF> 
 				Tweets by devlontecron</a> 
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				
