--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 	
 		<div class = "SocialMediaBox">
 			<a class="twitter-timeline" 
-	   data-theme="dark" 
+	   data-theme="dark"
+			   data-link-color="#0000FF"
 	   href="https://twitter.com/devlontecron" 
-			   data-tweet-limit="1" %0000FF> 
+			   data-tweet-limit="1"> 
 				Tweets by devlontecron</a> 
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				
