--- a/html/projects.html
+++ b/html/projects.html
@@ -32,12 +32,18 @@
 	
 	<div class = "projectBoxes">
 
-		<div class = "projectsBox3">
+		<div class = "projectsBoxTop">
 			<h1>Current Project:</h1>
-			<h3>Personal Server</h3>
-			<p>This is just a quick small side project to set up my personal server. I’m doing this to hopefully later migrate the data for this website over and have everything stored there. I also need a personal and safe place to store things that’s under my control and that I manage. The hardware I'll be using is my old Lenovo laptop with 4gb of ram and over about 500Gb of storage. As for the software, I will be getting more hands on time with Linux based OS and I will be installing Ubuntu Desktop for lighter, faster, and easier processing. </p>
+			<h3>Job Hunt</h3>
+			<p>please higher me!</p>
 		</div>
 	
+		<div class = "projectsBox3">
+			<h3>(X)Personal Server</h3>
+			<p>[this task is incomplete] This is just a quick small side project to set up my personal server. I’m doing this to hopefully later migrate the data for this website over and have everything stored there. I also need a personal and safe place to store things that’s under my control and that I manage. The hardware I'll be using is my old Lenovo laptop with 4gb of ram and over about 500Gb of storage. As for the software, I will be getting more hands on time with Linux based OS and I will be installing Ubuntu Desktop for lighter, faster, and easier processing. </p>
+		</div>
+		
+		
 		<div class = "projectsBox2">
 			<h3>Website</h3>
 			<p>Started working on the website in the latter half of the summer of 2016. I think I officially launched somewhere in mid-September with only one static page that simply said “hello world”. From there I have developed, from scratch using HTML5, JS, and CSS3, this work in progress personal website. I taught myself the language and how to launch using github and Codecademy. This has personally been my favorite project to work on. Much of the work has been me just struggling / fighting with CSS and trying to get everything just right. I will forever come back to this and update it and continue to work on it over the coming years. My end dream is for this to become a very slick, feature rich, smooth website that incorporate angular and other cutting edge languages. I hope for this to be a one stop destination for employers, researchers, friends and family to discover and explore who I am, what I’ve done, what I’m going to do, and where I’m heading.  </p>
