--- a/html/projects.html
+++ b/html/projects.html
@@ -35,12 +35,12 @@
 		<div class = "projectsBoxTop">
 			<h1>Current Project:</h1>
 			<h3>Job Hunt</h3>
-			<p>please higher me!</p>
+			<p>Please higher me!</p>
 		</div>
 	
 		<div class = "projectsBox3">
 			<h3>(X)Personal Server</h3>
-			<p>[this task is incomplete] This is just a quick small side project to set up my personal server. I’m doing this to hopefully later migrate the data for this website over and have everything stored there. I also need a personal and safe place to store things that’s under my control and that I manage. The hardware I'll be using is my old Lenovo laptop with 4gb of ram and over about 500Gb of storage. As for the software, I will be getting more hands on time with Linux based OS and I will be installing Ubuntu Desktop for lighter, faster, and easier processing. </p>
+			<p>[This task is incomplete] <br>This is just a quick small side project to set up my personal server. I’m doing this to hopefully later migrate the data for this website over and have everything stored there. I also need a personal and safe place to store things that’s under my control and that I manage. The hardware I'll be using is my old Lenovo laptop with 4gb of ram and over about 500Gb of storage. As for the software, I will be getting more hands on time with Linux based OS and I will be installing Ubuntu Desktop for lighter, faster, and easier processing. </p>
 		</div>
 		
 		
