--- a/html/about.html
+++ b/html/about.html
@@ -15,6 +15,7 @@
 
 			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>	
+			<h4> "Empower your colleagues and change the world"</h4>
 		</div>
 			
 			
