--- a/html/resume.html
+++ b/html/resume.html
@@ -13,7 +13,8 @@
 		<div class = "top">
 			<img src="../media/picBW (3).jpg" height=25% width=25% align = "left">
 			<h1>  Devin Joseph Durham</h1>
-			<h3>  Computer Scientist</h3>	
+			<h3>  Computer Scientist</h3>
+			<h4> "Empower your colleagues and change the world"</h4>
 		</div>
 			
 			
