--- a/html/projects.html
+++ b/html/projects.html
@@ -36,7 +36,7 @@
 		<div class = "projectsBoxTop">
 			<h1>Current Project:</h1>
 			<h3>Job Hunt</h3>
-			<p>Please hirer me!<br>Currently applying to multiple companies and start-ups in hopes to land my first job in the real world after graduation. Looking for anything really that has a paycheck. Would like to have an employer who wants to mold and develop my skills as a CSE. I’ll also be starting a fun coding project soon to show off my talent. Not exactly sure what the project will be. Looking to use smart / AI API's to develop the next generation of software.    </p>
+			<p>Please hire me!<br>Currently applying to multiple companies and start-ups in hopes to land my first job in the real world after graduation. Looking for anything really that has a paycheck. Would like to have an employer who wants to mold and develop my skills as a CSE. I’ll also be starting a fun coding project soon to show off my talent. Not exactly sure what the project will be. Looking to use smart / AI API's to develop the next generation of software.    </p>
 		</div>
 	
 		<div class = "projectsBox3">
