--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<li>Updated "Projects" tab with job hunt post</li>
 				<li>Updated back end of "Projects" for cleaner code and to remove code redundency </li>
 				<li>Wasted a lot of time trying to make / figure out a simple and modern image to place inside the nav box.</li>
-				<li>Known Issued / TO-DO: Twitter widget formatting, make a update log page, media page</li>
+				<li>Known Issues / TO-DO: Twitter widget formatting, make a update log page, media page</li>
 			</ul>
 			
 		</div>
