Update and rename Graduation2017 to Graduation2017.html

--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Devin Durham About</title>
+    <title>Devin Durham Graduation2017</title>
     <link rel="stylesheet" type="text/css" href="../CSS/devindurham.about.css"/>
     <link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
