--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -22,7 +22,7 @@
         <div class="buttons">
             <ul>
                 <li><a href="../index">Home</a></li>
-            	<li><a class="active" href="Graduation">About</a></li>
+            	<li><a class="active" href="Graduation">Graduation</a></li>
             </ul>
         </div>
 	      
