--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -30,10 +30,23 @@
     <div class = "aboutBox">
     <h1>Devin Durham Graduation 2017</h1>
     
-    <h3>Note: This is a "secret" page and can only be reached by typing in the URL</h3>
-    
+    <h3>Note: This is an un-linked page and can only be reached by typing in the URL or returning to it via the back button</h3>
+ 
+	</div>
 	
-</div>
+	<div class = "postcard">
+
+	</div>
+	
+	<div class = "info">
+
+	</div>
+	
+	<div class = "money">
+
+	</div>
+	
+	
 
 </body>
 </html>
