--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Devin Durham Graduation2017</title>
-    <link rel="stylesheet" type="text/css" href="../CSS/devindurham.about.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS/grad.css"/>
     <link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
 
