--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -26,7 +26,10 @@
             </ul>
         </div>
 	      
- 	</div>      
+ 	</div>
+	<div class = "projectBoxes">
+
+	
     <div class = "aboutBox">
     <h1>Devin Durham Graduation 2017</h1>
     
@@ -45,7 +48,7 @@
 	<div class = "money">
 
 	</div>
-	
+	</div>
 	
 
 </body>
