--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -38,7 +38,7 @@
 	</div>
 	
 	<div class = "postcard">
-		<img src="../media/FINAL.jpeg" width=66% height=100% />
+		<img src="../media/FINAL.jpg" width=66% height=100% />
 	
 
 	</div>
