--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -39,7 +39,7 @@
 	
 	<div class = "postcard">
 		<img src="../media/FINAL.jpg" width=100% height=100% />
-	
+		<img src="../media/flip side.jpg" width=100% height=100% />
 
 	</div>
 	
