--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -44,10 +44,17 @@
 	</div>
 	
 	<div class = "info">
+		<p>General info about the ceremony can be found on the UW website</p>
+		<p>Tickets are limited and must be reserved in adavnce here</p>
+		<p>The Tacoma Dome is located at 2727 East D St Tacoma WA 98421</p>
+	</div>
 
+	<div class = "party">
+		<p>There will be a small afterparty at Cushman Cottage which is just up the street from the dome: 2518 S Cushman Ave Tacoma WA 98408</p>
 	</div>
 	
 	<div class = "money">
+		<p>My personal address is 102 S 38th St. Tacoma WA 98418</p>
 
 	</div>
 	</div>
