--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -44,16 +44,18 @@
 	</div>
 	
 	<div class = "info">
-		<p>General info about the ceremony can be found on the UW website</p>
-		<p><a href="http://www.tacoma.uw.edu/commencement"> UW 2017 Commencement</a></p>
-		<p>Tickets are limited and must be reserved in adavnce here
+		<p>General info about the ceremony can be found on the
+		<a href="http://www.tacoma.uw.edu/commencement"> UW 2017 Commencement</a> website. </p>
+		
+		<p>Tickets are limited and must be reserved in adavnce here:
 		<a href="http://www.tacoma.uw.edu/commencement/tickets"> Tickets</a></p>
+		
 		<p>The Tacoma Dome is located at 2727 East D St Tacoma WA 98421</p>
 	</div>
 
 	<div class = "party">
 		<p>There will be a small afterparty at Cushman Cottage which is just up the street from the dome: 2518 S Cushman Ave Tacoma WA 98408</p>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d7662.027415011458!2d-122.44774533175551!3d47.23740221261656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x5490fff455555555%3A0xe0a5f8011a64972d!2sTacoma+Dome%2C+East+D+Street%2C+Tacoma%2C+WA!3m2!1d47.2366694!2d-122.4270299!4m5!1s0x54905567e46e8203%3A0xdd7336efd1421bcb!2s2518+S+Cushman+Ave%2C+Tacoma%2C+WA+98405!3m2!1d47.2362843!2d-122.4543032!5e0!3m2!1sen!2sus!4v1484689433774" width=100% height=100% frameborder="0" style="border:0" allowfullscreen></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d7662.027415011458!2d-122.44774533175551!3d47.23740221261656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x5490fff455555555%3A0xe0a5f8011a64972d!2sTacoma+Dome%2C+East+D+Street%2C+Tacoma%2C+WA!3m2!1d47.2366694!2d-122.4270299!4m5!1s0x54905567e46e8203%3A0xdd7336efd1421bcb!2s2518+S+Cushman+Ave%2C+Tacoma%2C+WA+98405!3m2!1d47.2362843!2d-122.4543032!5e0!3m2!1sen!2sus!4v1484689433774" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 	
 	<div class = "money">
