--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -44,14 +44,18 @@
 	</div>
 	
 	<div class = "info">
-		<p>General info about the ceremony can be found on the
+		<ul>
+			
+		<li><p>General info about the ceremony can be found on the
 		<a href="http://www.tacoma.uw.edu/commencement"> UW 2017 Commencement</a> website. </p>
-		
-		<p>Tickets are limited and must be reserved in advance here:
+			</li>
+		<li><p>Tickets are limited and must be reserved in advance here:
 		<a href="http://www.tacoma.uw.edu/commencement/tickets"> Tickets</a></p>
-		
-		<p>The Tacoma Dome is located at <a href="https://www.google.com/maps/place/2727+E+D+St,+Tacoma,+WA+98421/@47.2367503,-122.4291624,17z/data=!3m1!4b1!4m5!3m4!1s0x5490557e7106bd7d:0xdf4b422b03f2eebe!8m2!3d47.2367503!4d-122.4269737"
+			</li>
+		<li><p>The Tacoma Dome is located at <a href="https://www.google.com/maps/place/2727+E+D+St,+Tacoma,+WA+98421/@47.2367503,-122.4291624,17z/data=!3m1!4b1!4m5!3m4!1s0x5490557e7106bd7d:0xdf4b422b03f2eebe!8m2!3d47.2367503!4d-122.4269737"
 						    > 2727 East D St Tacoma WA 98421</a></p>
+			</li>
+		</ul>
 	</div>
 
 	<div class = "party">
