--- a/index.html
+++ b/index.html
@@ -55,20 +55,27 @@
 				<li>Wasted a lot of time trying to make / figure out a simple and modern image to place inside the nav box.</li>
 				<li>Known Issues / TO-DO: Twitter widget formatting, make a update log page, media page</li>
 			</ul>
-			
 		</div>
 	
 		<div class = "SocialMediaBox">
 			<a class="twitter-timeline" 
-	   data-theme="dark"
-		
-	   href="https://twitter.com/devlontecron" 
-			   data-tweet-limit="1"> 
+			   data-theme="dark"
+	  			 href="https://twitter.com/devlontecron" 
+				   data-tweet-limit="1"> 
 				Tweets by devlontecron</a> 
-	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>	
+		</div>
+		
+		<div class = "Grad">
+			<a href="http://www.DevinDurham.me/html/Graduation2017">
+				<img src="/media/FINAL.jpg">
+			</a>
+
 				
 			
-			</div>
+		</div>
+		
+		
 		</div>
 
     </body>
