--- a/index.html
+++ b/index.html
@@ -46,14 +46,17 @@
 		
 		<div class = "UpdateLog">
 			<h3>Update Log</h3>
-			<h4>(12/20/2016) New Year, New .me </h4>
+			<h4>(1/17/2017) Graduation 2017 </h4>
 			<ul>
+				<li> Made a new "Graduation" page (coming soon)
+				<!--
+				12/20/16 "new year, new .me!"
 				<li>Finally got around to updating and putting content to the main home page. More to come. It still seems dull. </li>
 				<li>Updated minor UI things. Made the "Contact" tab a table. Expanded the navigation box. Accent color is now (0,0,255)</li>
 				<li>Updated "Projects" tab with job hunt post</li>
 				<li>Updated back end of "Projects" for cleaner code and to remove code redundency </li>
 				<li>Wasted a lot of time trying to make / figure out a simple and modern image to place inside the nav box.</li>
-				<li>Known Issues / TO-DO: Twitter widget formatting, make a update log page, media page</li>
+				--><li>Known Issues / TO-DO: Twitter widget formatting, make a update log page, media page</li>
 			</ul>
 		</div>
 	
@@ -68,7 +71,7 @@
 		
 		<div class = "Grad">
 			<a href="http://www.DevinDurham.me/html/Graduation2017">
-				<img src="/media/FINAL.jpg">
+				<img src="/media/FINAL.jpg" width= 66% height = 100%>
 			</a>
 
 				
