--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		
 		<div class = "Grad">
 			<a href="http://www.DevinDurham.me/html/Graduation2017">
-				<img src="/media/FINAL.jpg" width= 66% height = 100%>
+				<img src="../media/FINAL.jpg" width=100% height=100% />
 			</a>
 
 				
