--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -37,12 +37,24 @@
  
 	</div>
 -->	
+		
+<div id="f1_container">
+	<div id="f1_card" class="shadow">
+  		<div class="front face">
+    			<img src="../media/FINAL.jpg" width=100% height=100% />
+  		</div>
+  		<div class="back face center">
+    			<img src="../media/flip side.jpg" width=100% height=100% />
+  		</div>
+	</div>
+</div>
+<!--		
 	<div class = "postcard">
 		<img src="../media/FINAL.jpg" width=100% height=100% />
 		<img src="../media/flip side.jpg" width=100% height=100% />
 
 	</div>
-	
+-->	
 	<div class = "info">
 		<ul>
 			
