--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -41,10 +41,10 @@
 <div id="f1_container">
 	<div id="f1_card" class="shadow">
   		<div class="front face">
-    			<img src="../media/FINAL.jpg" width=100% height=100% />
+    			<img src="../media/FINAL.jpg" />
   		</div>
   		<div class="back face center">
-    			<img src="../media/flip side.jpg" width=100% height=100% />
+    			<img src="../media/flip side.jpg"/>
   		</div>
 	</div>
 </div>
