--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -38,15 +38,13 @@
 	</div>
 -->	
 		
-<div id="f1_container">
-	<div id="f1_card" class="shadow">
-  		<div class="front face">
-    			<img src="../media/FINAL.jpg" />
-  		</div>
-  		<div class="back face center">
-    			<img src="../media/flip side.jpg"/>
-  		</div>
-	</div>
+<div class="flipcard h">
+    <div class="front">
+      <p>This is the front side</p>
+    </div>
+    <div class="back">
+	    <p> This is the back side</p>
+    </div>
 </div>
 <!--		
 	<div class = "postcard">
