--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -38,14 +38,16 @@
 	</div>
 -->	
 		
-<div class="flipcard h">
-    <div class="front">
-      <p>This is the front side</p>
-    </div>
-    <div class="back">
-	    <p> This is the back side</p>
-    </div>
-</div>
+<div class="flip"> 
+        <div class="card"> 
+            <div class="face front"> 
+                Front
+            </div> 
+            <div class="face back"> 
+                Back
+            </div> 
+        </div> 
+    </div> 
 <!--		
 	<div class = "postcard">
 		<img src="../media/FINAL.jpg" width=100% height=100% />
