--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -37,17 +37,18 @@
  
 	</div>
 -->	
-		
-<div class="flip"> 
-        <div class="card"> 
-            <div class="face front"> 
-                Front
-            </div> 
-            <div class="face back"> 
-                Back
-            </div> 
-        </div> 
-    </div> 
+<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+  <div class="flipper">
+    <div class="front">
+      <span class="name">David Walsh</span>
+    </div>
+    <div class="back">
+      <div class="back-logo"></div>
+      <div class="back-title">@davidwalshblog</div>
+      <p>Mozilla Web Developer, MooTools & jQuery Consultant, MooTools Core Developer, Javascript Fanatic, CSS Tinkerer, PHP Hacker, and web lover.</p>
+    </div>
+  </div>
+</div>
 <!--		
 	<div class = "postcard">
 		<img src="../media/FINAL.jpg" width=100% height=100% />
