--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -37,18 +37,14 @@
  
 	</div>
 -->	
-<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-  <div class="flipper">
-    <div class="front">
-      <span class="name">David Walsh</span>
-    </div>
-    <div class="back">
-      <div class="back-logo"></div>
-      <div class="back-title">@davidwalshblog</div>
-      <p>Mozilla Web Developer, MooTools & jQuery Consultant, MooTools Core Developer, Javascript Fanatic, CSS Tinkerer, PHP Hacker, and web lover.</p>
-    </div>
+<div class="card effect__EFFECT">
+  <div class="card__front">
+    <span class="card__text">front</span>
   </div>
-</div>
+  <div class="card__back">
+    <span class="card__text">back</span>
+  </div>
+</div><!-- /card -->
 <!--		
 	<div class = "postcard">
 		<img src="../media/FINAL.jpg" width=100% height=100% />
