--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -39,8 +39,10 @@
 -->	
 	
 	<div class = "postcard">
-		<img src="../media/FINAL.jpg" width=100% height=100% />
-		<img src="../media/flip side.jpg" width=100% height=100% />
+		    <figure class="front"><img src="../media/FINAL.jpg" width=100% height=100% /></figure>
+   		    <figure class="back"><img src="../media/flip side.jpg" width=100% height=100% /></figure>
+		
+		
 
 	</div>
 	
