--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -37,12 +37,24 @@
  
 	</div>
 -->	
-	
+		
+<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+	<div class="flipper">
+		<div class="front">
+    			<img src="../media/FINAL.jpg" width=100% height=100% />
+		</div>
+		<div class="back">
+			<img src="../media/flip side.jpg" width=100% height=100% />
+		</div>
+	</div>
+</div>
+		
+	<!--
 	<div class = "postcard">
 		    <figure class="front"><img src="../media/FINAL.jpg" width=100% height=100% /></figure>
    		    <figure class="back"><img src="../media/flip side.jpg" width=100% height=100% /></figure>
 		
-		
+	-->	
 
 	</div>
 	
