--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -38,8 +38,8 @@
 	</div>
 -->	
 		
-<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-	<div class="flipper">
+<div class="postcard">
+		 <div class="card effect__hover">
 		<div class="front">
     			<img src="../media/FINAL.jpg" width=100% height=100% />
 		</div>
