--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -30,6 +30,18 @@
 	<div class = "projectBoxes">
 
 		
+	  <div class="container">
+  		<div class="card">
+    			<div class="face front">
+      				<img src="http://images2.fanpop.com/image/photos/10200000/-Puppies-puppies-10290362-120-90.jpg" />
+    			</div>
+   			 <div class="face back">
+      				<p>FART</p>
+    			</div>
+  		</div>
+	</div>
+		
+		<!--
 		<div class="postcard">
 
     			<img src="../media/FINAL.jpg" width=100% height=100% />
@@ -38,7 +50,7 @@
 		
 
 		</div>
-	
+	-->
 		
 	<div class = "RSVP">
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe2pubpKA9fBklzdu1pzc4b8Ck89g_eSA8nWlu8Bw694AZ7NA/viewform?embedded=true" width=100% height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
