--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -33,10 +33,10 @@
 	  <div class="container">
   		<div class="card">
     			<div class="face front">
-      				<img src="../media/FINAL.jpg" />
+      				<img src="../media/FINAL.jpg" width = 30% />
     			</div>
    			 <div class="face back">
-      				<img src="../media/flip side.jpg" />
+      				<img src="../media/flip side.jpg" width = 30%/>
     			</div>
   		</div>
 	</div>
