--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -32,10 +32,10 @@
 	
   		<div class="card">
     			<div class="face front">
-      				<img src="../media/FINAL.jpg" width = 30% />
+      				<img src="http://images2.fanpop.com/image/photos/10200000/-Puppies-puppies-10290362-120-90.jpg" />
     			</div>
    			 <div class="face back">
-      				<img src="../media/flip side.jpg" width = 30%/>
+      				<img src="http://images2.fanpop.com/image/photos/10200000/-Puppies-puppies-10290362-120-90.jpg" />
     			</div>
   		</div>
 	
