--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -29,7 +29,7 @@
  	</div>
 	<div class = "projectBoxes">
 
-	
+	 <div class="container">
   		<div class="card">
     			<div class="face front">
       				<img src="http://images2.fanpop.com/image/photos/10200000/-Puppies-puppies-10290362-120-90.jpg" />
@@ -38,6 +38,7 @@
       				<img src="http://images2.fanpop.com/image/photos/10200000/-Puppies-puppies-10290362-120-90.jpg" />
     			</div>
   		</div>
+		 </div>
 	
 		
 		<!--
