--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -32,10 +32,11 @@
 	 <div class="container">
   		<div class="card">
     			<div class="face front">
-      				<img src="http://images2.fanpop.com/image/photos/10200000/-Puppies-puppies-10290362-120-90.jpg" />
+      				<img src="../media/FINAL.jpg" />
     			</div>
    			 <div class="face back">
-      				<img src="http://images2.fanpop.com/image/photos/10200000/-Puppies-puppies-10290362-120-90.jpg" />
+      				 <img src="../media/flip side.jpg"/>
+
     			</div>
   		</div>
 		 </div>
