--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -28,7 +28,7 @@
 	      
  	</div>
 	<div class = "projectBoxes">
-
+		<div class = "container">
 
   		<div class="card">
     			<div class="face front">
@@ -40,7 +40,7 @@
     			</div>
   		</div>
 		 
-	
+	</div>
 		
 		<!--
 		<div class="postcard">
