--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -29,6 +29,7 @@
  	</div>
 	<div class = "projectBoxes">
 		<div class = "container">
+			<img src="../media/FINAL.jpg" />
 
   		<div class="card">
     			<div class="face front">
