--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -28,9 +28,9 @@
 	      
  	</div>
 	<div class = "projectBoxes">
+		
+		<div class = "dummy">
 		<div class = "container">
-			<img src="../media/FINAL.jpg" />
-
   		<div class="card">
     			<div class="face front">
       				<img src="../media/FINAL.jpg" />
@@ -41,6 +41,7 @@
     			</div>
   		</div>
 		 
+	</div>
 	</div>
 		
 		<!--
