--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 		<div class = "top">
 			<div class = "topimg">
-			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
+			<img src="media/picBW (3).jpg">
 			</div>
 			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
