--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
 <div class="boxed">
 	
 		<div class = "top">
-
-			<img src="media/picBW (3).jpg">
-				<h1>  Devin Joseph Durham</h1>
+			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
+			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
 			<h4> "Empower your colleagues and change the world"</h4>
-			
 			
 		</div>
 			
@@ -48,17 +46,14 @@
 		
 		<div class = "UpdateLog">
 			<h3>Update Log</h3>
-			<h4>(1/17/2017) Graduation 2017 </h4>
+			<h4>(12/20/2016) New Year, New .me </h4>
 			<ul>
-				<li> Made a new "Graduation" page (coming soon)
-				<!--
-				12/20/16 "new year, new .me!"
 				<li>Finally got around to updating and putting content to the main home page. More to come. It still seems dull. </li>
 				<li>Updated minor UI things. Made the "Contact" tab a table. Expanded the navigation box. Accent color is now (0,0,255)</li>
 				<li>Updated "Projects" tab with job hunt post</li>
 				<li>Updated back end of "Projects" for cleaner code and to remove code redundency </li>
 				<li>Wasted a lot of time trying to make / figure out a simple and modern image to place inside the nav box.</li>
-				--><li>Known Issues / TO-DO: Twitter widget formatting, make a update log page, media page</li>
+				<li>Known Issues / TO-DO: Twitter widget formatting, make a update log page, media page</li>
 			</ul>
 		</div>
 	
@@ -70,14 +65,18 @@
 				Tweets by devlontecron</a> 
 			<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>	
 		</div>
-<!--		
+		
 		<div class = "Grad">
 			<a href="http://www.DevinDurham.me/html/Graduation2017">
-				<img src="../media/FINAL.jpg" width=100% height=100% />
-			</a>			
+				<img src="/media/FINAL.jpg">
+			</a>
+
+				
+			
 		</div>
--->		
-	</div>
+		
+		
+		</div>
 
     </body>
 </html>
