--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -31,8 +31,8 @@
 
 		<div class="postcard">
 
-    			<img src="../media/FINAL.jpg" width=100% height=100% />
-		      <img src="../media/flip side.jpg" width=100% height=100% />
+    			<img src="../media/A2 FINAL Strip.jpg" width=100% height=100% />
+		      <img src="../media/A2 flip side.jpg" width=100% height=100% />
 
 		
 
