--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -31,8 +31,14 @@
 
 		<div class="postcard">
 
-    			<img src="../media/A2 FINAL Strip.jpg" width=100% height=100% />
-		      <img src="../media/A2 flip side.jpg" width=100% height=100% />
+    			
+  <div class='card' id='flip'>
+    <a href='#flip' class='flip'>Flip that card</a>
+    <a href='#unflip' class='unflip'>unFlip that card</a>
+    <img src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRZNrO98qaNGRBnMuuMctzqNMsE0DeUQXelgWi2zPsKYmjD-lqn' class='front' />
+    <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSwcvrsqZZFqZYMPSfVGDomBaDbQc2b7A1i88kDA2P52k3VN0y7w' class='back' />
+  </div>
+  
 
 		
 
