--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -35,8 +35,8 @@
   <div class='card' id='flip'>
     <a href='#flip' class='flip'>Flip card</a>
     <a href='#unflip' class='unflip'>Flip card</a>
-    <img src='./media/A2 FINAL Strip.jpg' class='front' />
-    <img src='./media/A2 flip side.jpg' class='back' />
+    <img src="./media/A2 FINAL Strip.jpg" class='front' />
+    <img src="./media/A2 flip side.jpg" class='back' />
   </div>
   
 
