--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -39,6 +39,8 @@
     <img src="../media/A2 flip side.jpg" class='back' />
 
   </div>
+			<img src="../media/A2 flip side.jpg" class='back' />
+
   		</div>
 
 		
