--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -39,7 +39,7 @@
     <img src="../media/A2 flip side.jpg" class='back' />
 
   </div>
-			<img src="../media/A2 flip side.jpg" class='back' />
+			<img src="../media/A2 FINAL Strip.jpg" class='front' />
 
   		</div>
 
