--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -39,8 +39,9 @@
     <img src="../media/A2 flip side.jpg" class='back' />
 
   </div>
+			<div class = "dummy">
 			<img src="../media/A2 FINAL Strip.jpg" class='front' />
-
+</div>
   		</div>
 
 		
