--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="buttons">
             <ul>
                 <li><a class="active" href="index">Home</a></li>
+		<li><a href="html/Graduation2017">Graduation</a></li>
             	<li><a href="html/about">About</a></li>
             	<li><a href="html/resume">Resume</a></li>
             	<li><a href="html/projects">Projects</a></li>
