--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -52,19 +52,16 @@
 		
 		
 	<div class = "info">
-		<p>General info about the ceremony can be found on the
-		<a href="http://www.tacoma.uw.edu/commencement"> UW 2017 Commencement</a> website. </p>
+		<a href="http://www.tacoma.uw.edu/commencement"> 
+			<img src="../media/info.png" alt = "Commencement Info">
+			</a>
 	</div>
 	
 	<div class = "venmo">
-		<p>Tickets are limited and can be reserved here:
-		<a href="http://www.tacoma.uw.edu/commencement/tickets"> Tickets</a></p>
+		<a href="venmo.com">
+		<img src ="../media/venmologo.png" alt="Venmo.com">
+		</a>
 	</div>	
-	
-	<div class = "be">
-		<p>The Tacoma Dome is located at <a href="https://www.google.com/maps/place/2727+E+D+St,+Tacoma,+WA+98421/@47.2367503,-122.4291624,17z/data=!3m1!4b1!4m5!3m4!1s0x5490557e7106bd7d:0xdf4b422b03f2eebe!8m2!3d47.2367503!4d-122.4269737"
-						    > 2727 East D St Tacoma WA 98421</a></p>
-	</div>
 
 	<div class = "party">
 		<p>There will be a celebratory Champaign toast at Cushman Cottage at 5pm, which is just up the street from the dome: <a href = "https://www.google.com/maps/place/2518+S+Cushman+Ave,+Tacoma,+WA+98405/@47.2362843,-122.4564919,17z/data=!3m1!4b1!4m5!3m4!1s0x54905567e46e8203:0xdd7336efd1421bcb!8m2!3d47.2362843!4d-122.4543032">
