--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -54,7 +54,7 @@
 	<div class = "info">
 		
 			<img src="../media/info.png" alt = "Commencement Info">
-			
+			<p>Commencement Information</p>
 	</div>
 		</a>
 		
