--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -54,13 +54,13 @@
 	<div class = "info">
 		
 			<img src="../media/info.png" alt = "Commencement Info">
-			<p>Commencement Information</p>
+			<p>Commencement <br> Information</p>
 	</div>
 		</a>
 		
 	<a href="https://venmo.com/?txn=pay&audience=public&recipients=DevlonTecron&amount=1.00&note=Graduation">
 	<div class = "venmo">
-		
+		<p> </p>
 		<img src ="../media/venmologo.png" alt="Venmo.com">
 		<p>Venmo</p>
 	</div>	
