--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -62,7 +62,7 @@
 	<div class = "venmo">
 		<p> </p>
 		<img src ="../media/venmologo.png" alt="Venmo.com">
-		<p>Venmo <br> </p>
+		<p>Venmo <br>_____</p>
 	</div>	
 		</a>
 
