--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -32,31 +32,31 @@
 		<div class="postcard">
 
     			
-  <div class='card' id='flip'>
-	      <a href='#flip' class='flip'>Flip card</a>
-    <a href='#unflip' class='unflip'>Flip card</a>
-    <img src="../media/A2 FINAL Strip.jpg" class='front' />
-    <img src="../media/A2 flip side.jpg" class='back' />
-
-  </div>
-			<div class = "dummy">
-			<img src="../media/A2 FINAL Strip.jpg" class='front' />
-</div>
-  		</div>
-
-		
-	<div class = "RSVP">
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe2pubpKA9fBklzdu1pzc4b8Ck89g_eSA8nWlu8Bw694AZ7NA/viewform?embedded=true" width=100%; height="1300px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-
+		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+	<div class="flipper">
+		<div class="front">
+			<img src="../media/A2 FINAL Strip.jpg"/>
+		</div>
+		<div class="back">
+			 <img src="../media/A2 flip side.jpg"/>
+		</div>
 	</div>
+</div>
+			</div>
+			
 		
-		<a href="http://www.tacoma.uw.edu/commencement"> 
+		
+<div class = "RSVP">
+	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe2pubpKA9fBklzdu1pzc4b8Ck89g_eSA8nWlu8Bw694AZ7NA/viewform?embedded=true" width=100%; height="1300px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+</div>
+		
+<a href="http://www.tacoma.uw.edu/commencement"> 
 	<div class = "info">
 		<p> </p>
 			<img src="../media/info.png" alt = "Commencement Info">
 			<p>Commencement <br> Information</p>
 	</div>
-		</a>
+</a>
 		
 	<a href="https://venmo.com/?txn=pay&audience=public&recipients=DevlonTecron&amount=1.00&note=Graduation">
 	<div class = "venmo">
