--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -33,7 +33,7 @@
 
     			
 		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-			<img src="../media/A2 FINAL Strip.jpg" id="dummy"/>
+			<img  id="dummy" src="../media/A2 FINAL Strip.jpg"/>
 	<div class="flipper">
 		<div class="front">
 			<img src="../media/A2 FINAL Strip.jpg"/>
