--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -29,7 +29,7 @@
 	
 	<div class = "projectBoxes">
 		<div class="postcard">
-			<img src="../media/A2 FINAL Strip.jpg"/>
+			<img src="../media/dummy.png"/>
 			<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 			<div class="flipper">
 				<div class="front">
