--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -29,7 +29,9 @@
 	
 	<div class = "projectBoxes">
 		<div class="postcard">
+			<div class= "dummy">
 			<img src="../media/dummy.png"/>
+				</div>
 			<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 			<div class="flipper">
 				<div class="front">
