--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -29,21 +29,20 @@
 	
 	<div class = "projectBoxes">
 		<div class="postcard">
-			<div class="dummy">
-			<img src="../media/dummy.png"/>
-				</div>
-			<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-			<div class="flipper">
-				<div class="front">
-					<img src="../media/A2 FINAL Strip.jpg"/>
-				</div>
-				<div class="back">
-			 		<img src="../media/A2 flip side.jpg"/>
-				</div>
-			</div>
-		</div>
-	</div>
-		
+			
+			<div id="f1_container">
+<div id="f1_card" class="shadow">
+  <div class="front face">
+  <img src="../media/A2 FINAL Strip.jpg"/>
+  </div>
+  <div class="back face center">
+    <img src="../media/A2 flip side.jpg"/>
+  </div>
+</div>
+</div>
+</div>			
+			
+
 			
 		
 		
