--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -29,9 +29,12 @@
 	
 	<div class = "projectBoxes">
 		<div class="postcard">
+			<div class="front">
 			<img src="../media/A2 FINAL Strip.jpg"/>
-			<img src="../media/A2 flip side.jpg"/>
-			
+			</div>
+			<div class ="back">
+				<img src="../media/A2 flip side.jpg"/>
+			</div>
 		
 
 </div>			
