--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -29,15 +29,19 @@
 	
 	<div class = "projectBoxes">
 		<div class="postcard">
-			<div class="front">
-			<img src="../media/A2 FINAL Strip.jpg"/>
-			</div>
-			<div class ="back">
-				<img src="../media/A2 flip side.jpg"/>
-			</div>
-		
+			<div class='card' id='flip'>
+	      			<a href='#flip' class='flip'>Flip card</a>
+    				<a href='#unflip' class='unflip'>Flip card</a>
+    				<img src="../media/A2 FINAL Strip.jpg" class='front' />
+    				<img src="../media/A2 flip side.jpg" class='back' />
 
-</div>			
+  			</div>
+			
+			<div class = "dummy">
+			<img src="../media/A2 FINAL Strip.jpg" class='front' />
+			</div>
+		</div>
+  			
 			
 
 			
