--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -29,19 +29,20 @@
 	
 	<div class = "projectBoxes">
 		<div class="postcard">
-			<div class='card' id='flip'>
-	      			<a href='#flip' class='flip'>Flip card</a>
-    				<a href='#unflip' class='unflip'>Flip card</a>
-    				<img src="../media/A2 FINAL Strip.jpg" class='front' />
-    				<img src="../media/A2 flip side.jpg" class='back' />
-
-  			</div>
-			
-			<div class = "dummy">
-			<img src="../media/A2 FINAL Strip.jpg" class='front' />
+			<div class="card-container">
+ 				 <div class="card">
+    					<div class="side">
+						<img src="../media/A2 FINAL Strip.jpg">
+					 </div>
+					<div class="side back">
+						<img src="../media/A2 flip side.jpg">
+					 </div>
+  				</div>
 			</div>
+
+
 		</div>
-  			
+  		
 			
 
 			
