--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -29,16 +29,16 @@
 	
 	<div class = "projectBoxes">
 		<div class="postcard">
-			<div class="card-container">
+
  				 <div class="card">
-    					<div class="side">
+    					<div class="front">
 						<img src="../media/A2 FINAL Strip.jpg">
 					 </div>
-					<div class="side back">
+					<div class="back">
 						<img src="../media/A2 flip side.jpg">
 					 </div>
   				</div>
-			</div>
+			
 
 
 		</div>
