--- a/html/Graduation2017.html
+++ b/html/Graduation2017.html
@@ -28,19 +28,18 @@
  	</div>
 	
 	<div class = "projectBoxes">
-		<div class="postcard">
+				<div class="postcard">
+			<div class='card' id='flip'>
+	      			<a href='#flip' class='flip'>Flip card</a>
+    				<a href='#unflip' class='unflip'>Flip card</a>
+    				<img src="../media/A2 FINAL Strip.jpg" class='front' />
+    				<img src="../media/A2 flip side.jpg" class='back' />
 
- 				 <div class="card">
-    					<div class="front">
-						<img src="../media/A2 FINAL Strip.jpg">
-					 </div>
-					<div class="back">
-						<img src="../media/A2 flip side.jpg">
-					 </div>
-  				</div>
+  			</div>
 			
-
-
+			<div class = "dummy">
+			<img src="../media/A2 FINAL Strip.jpg" class='front' />
+			</div>
 		</div>
   		
 			
