--- a/index.html
+++ b/index.html
@@ -41,20 +41,17 @@
 	<div class = "SubBoxes">
 
 		<div class = "Sticky">
-			<h3>Looking For Work!</h3>
-			<p>I graduate in June of 2017 with a Bachelor’s of Science in Computer Science & Systems from the University of Washington! I’m looking for entry level jobs to help build my skill set and gain experience in the work force. Please feel free to look around (especially the “Resume” tab) and or reach out to me in any of the ways listed under the “Contact” tab. 
+			<h3>"So, what are your plans after school?"</h3>
+			<p>I graduate in June of 2017 with a Bachelor’s of Science in Computer Science & Systems from the University of Washington (Tacoma Campus)! I am honored and very lucky in that I’ll be doing research work this summer at the university on Uni-Kernel Operating System in the Cloud. I’ll also be taking a Networking class this summer on top of the research work so I’ll be inside a lot. I’m still on the hunt for a job (because I bought myself time) and will hopefully have something lined up by late August. I also anticipate moving to downtown Seattle (as I know many are excited about) no later than September. As for the more distant future, I’m not 100% sure yet. I do plan on returning to school for my masters, but I’m not sure what in. I also don’t plan on staying in Seattle for too long and have been toying with moving to somewhere warmer and bigger. So yea, that’s my summer.  
 		</div>
 		
 		<div class = "UpdateLog">
 			<h3>Update Log</h3>
-			<h4>(12/20/2016) New Year, New .me </h4>
+			<h4>(5/9/2017) GRAD-ually Getting There </h4>
 			<ul>
-				<li>Finally got around to updating and putting content to the main home page. More to come. It still seems dull. </li>
-				<li>Updated minor UI things. Made the "Contact" tab a table. Expanded the navigation box. Accent color is now (0,0,255)</li>
-				<li>Updated "Projects" tab with job hunt post</li>
-				<li>Updated back end of "Projects" for cleaner code and to remove code redundency </li>
-				<li>Wasted a lot of time trying to make / figure out a simple and modern image to place inside the nav box.</li>
-				<li>Known Issues / TO-DO: Twitter widget formatting, make a update log page, media page</li>
+				<li> Graduation page is now available. Been slowly working on it for the last few months to get it just right. The postcard animation is broken but I've spent far too long trying to get it to work.</li>
+				<li> updated general posts and texts</li>
+				<li>Known Issues / TO-DO: Flip Card on Grduation is broken, Twitter widget formatting, make a update log page, media page</li>
 			</ul>
 		</div>
 	
@@ -73,3 +70,10 @@
 
     </body>
 </html>
+
+
+<!-- <li>Finally got around to updating and putting content to the main home page. More to come. It still seems dull. </li>
+				<li>Updated minor UI things. Made the "Contact" tab a table. Expanded the navigation box. Accent color is now (0,0,255)</li>
+				<li>Updated "Projects" tab with job hunt post</li>
+				<li>Updated back end of "Projects" for cleaner code and to remove code redundency </li>
+				<li>Wasted a lot of time trying to make / figure out a simple and modern image to place inside the nav box.</li>   -->
