--- a/html/projects.html
+++ b/html/projects.html
@@ -35,18 +35,18 @@
 
 		<div class = "Research">
 			<h3>Research Summer 2017</h3>
-			<p>research work this summer!</p>
+			<p>I’m very lucky to have the opportunity to be working with Dr. Wes Lloyd this summer under the University of Washington on Uni-Kernel and OSv software deployed on the cloud. We will be measuring the efficient and cost of implementing a Kernel level application to a server using Amazon Wed Services. This software application approach is a brand-new type of software that lets an application act and work on the Kernel level. The idea is to let the application request and build the most bare-bones operating system and stand alone. This reduced boot times and increases efficient in time and space. OSv and Uni-Kernel have already been implemented and have shown there worth. However, we will be examining the comparative cost between different web services and how it would change and effect the application. I am very excited and honored that Dr. Lloyd has reach out to me to assist him in this project. </p>
 		</div>
 		
 		<div class = "Hackalong">
-			<h3>Comming Soon: Hackalong</h3>
-			<p>Comming Soon to the Google Play Store</p>
+			<h3>Hackalong</h3>
+			<p>An android based application that allows users to browse, search, and follow hackathons happening near by or around the country. Providing information like dates, times, themes, attendees and more. Users will have profiles with “attributes” to suggest hackathons and people with similar interests to connect and collaborate. Coming Soon to the Google Play Store</p>
 			
 		</div>
 		
 		<div class = "projectsBoxTop">
 			<h3>Job Hunt</h3>
-			<p>Please hire me!<br>Please hire me!<br>Currently applying to multiple companies and start-ups in hopes to land my first job in the real world after graduation. I wont be truly available until late mid-August of 2017. Would like to have an employer who wants to mold and develop my skills as a Computer Scientist and promote my growth.</p>
+			<p>Please hire me!<br>Currently applying to multiple companies and start-ups in hopes to land my first job in the real world after graduation. I wont be truly available until late mid-August of 2017. Would like to have an employer who wants to mold and develop my skills as a Computer Scientist and promote my growth.</p>
 		</div>
 	
 		<div class = "projectsBox3">
