--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			<h4>(5/9/2017) GRAD-ually Getting There </h4>
 			<ul>
 				<li> Graduation page is now available. Been slowly working on it for the last few months to get it just right. The postcard animation is broken but I've spent far too long trying to get it to work.</li>
+				<li> In the Graduation page, the missing nav buttons is on purpose</li>
 				<li> updated general posts and texts</li>
 				<li>Known Issues / TO-DO: Flip Card on Grduation is broken, Twitter widget formatting, make a update log page, media page</li>
 			</ul>
