--- a/html/projects.html
+++ b/html/projects.html
@@ -20,7 +20,7 @@
         	<div class="buttons">
             		<ul>
                 		<li><a href="../index">Home</a></li>
-				<li><a href="html/Graduation2017">Graduation</a></li>
+				<li><a href="../html/Graduation2017">Graduation</a></li>
             			<li><a href="about">About</a></li>
             			<li><a href="resume">Resume</a></li>
             			<li><a class="active" href="projects">Projects</a></li>
