--- a/html/resume.html
+++ b/html/resume.html
@@ -33,7 +33,7 @@
 	      
  	</div> 
 <div class = "resumeBox">	
-	<embed src="../media/DevinDurham.pdf" />
+	     <img src="../media/DevinDurhamResume.JPG">
 </div>
 </body>
 </html>
