--- a/html/about.html
+++ b/html/about.html
@@ -14,7 +14,7 @@
 			<img src="../media/picBW (3).jpg" align = "left">
 
 			<h1>  Devin Joseph Durham</h1>
-			<h3>  Computer Scientist</h3>	
+			<h3>  Computer Scientist / Academic / Film & Arts Enthusiast / Explorer</h3>
 			<h4> "Empower your colleagues and change the world"</h4>
 		</div>
 			
