--- a/html/about.html
+++ b/html/about.html
@@ -35,7 +35,7 @@
  	</div>      
     <div class = "aboutBox">
     <h1>This page is under construction. </h1>
-	    <h3>Sorry about that. Here is a Gif of puppies!</h3>
+	    <h3>Sorry about that. Didn't mean to cause confusion. </h3>
 	    <iframe src="//giphy.com/embed/4uEdsl76ytnVu" width="480" height="412" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/husky-4uEdsl76ytnVu">via GIPHY</a></p>
  <!--   
     <h3>Life Story</h3>
