--- a/html/resume.html
+++ b/html/resume.html
@@ -33,7 +33,7 @@
 	      
  	</div> 
 <div class = "resumeBox">	
-	     <img src="../media/DevinDurhamResume.pdf">
+	     <img src="../media/DevinDurham.JPG">
 </div>
 </body>
 </html>
