--- a/html/archive.html
+++ b/html/archive.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Devin Durham Contact</title>
+    <title>Devin Durham Archive</title>
     
 </head>
 
 <body>
-
-<p>Link to grab page is here:</p>
+<h1>Archives</h1>
+<p>Link to Graduation Page is here:</p>
 
 
 </body>
