--- a/html/index2.html
+++ b/html/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <link rel="stylesheet" type="text/css" href="../CSS/devindurham.index2.css"/>
 </head>
 
 <body>
