--- a/html/welcome.html
+++ b/html/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="../CSS/devindurham.index2.css"/>
+  <link rel="stylesheet" type="text/css" href="../CSS/welcome.css"/>
 </head>
 
 <body>
