--- a/html/welcome.html
+++ b/html/welcome.html
@@ -2,11 +2,18 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="../CSS/welcome.css"/>
-  <link rel="import" href="../index.html"/>
+  <link rel="import" href="..index.html"/>
+  
+  
+  
 </head>
 
 <body>
-  <h1>Devin Joseph DurhamQ<h1>
+  <script>
+    var doc= document.querySelector('link[rel="import"]').import;
+</script>
+  
+  <h1>Devin Joseph Durham<h1>
   <h4>Computer Scientist / Academic / Film & Arts Enthusiast / Explorer<h4>
   <h7>"Empower your colleagues and change the world"<h7>
 </body>
