--- a/html/archive.html
+++ b/html/archive.html
@@ -7,7 +7,8 @@
 
 <body>
 <h1>Archives</h1>
-<p>Link to Graduation Page is here:</p>
+<p>These pages are no longer maintained or updated. Some elements may be broken or not functioning properly. 
+<a href="../html/Graduation2017.html"> Granduation Page</a>
 
 
 </body>
