--- a/html/archive.html
+++ b/html/archive.html
@@ -8,8 +8,10 @@
 <body>
 <h1>Archives</h1>
 <p>These pages are no longer maintained or updated. Some elements may be broken or not functioning properly. 
-<a href="../html/Graduation2017.html"> Granduation Page</a>
-
+    
+ <ul>
+     <li><a href="../html/Graduation2017.html"> Granduation Page</a>
+</ul>
 
 </body>
 </html>
