--- a/html/welcome.html
+++ b/html/welcome.html
@@ -17,7 +17,7 @@
   <h4>Computer Scientist / Academic / Film & Arts Enthusiast / Explorer<h4>
   <h7>"Empower your colleagues and change the world"<h7>
     
-  <div w3-include-html="archive.html"></div> 
+  <div w3-include-html="navBar.html"></div> 
     
   <script>
     w3.includeHTML();
