--- a/html/navBar.html
+++ b/html/navBar.html
@@ -1,3 +1,5 @@
+
+<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 <ul>
     <li><a class="active" href="index">Home</a></li>
     <li><a href="html/about">About</a></li>
