--- a/html/welcome.html
+++ b/html/welcome.html
@@ -3,8 +3,41 @@
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   
 <head>
-  <link rel="stylesheet" type="text/css" href="../CSS/welcome.css"/>
- 
+ <style>
+   .buttons{
+	clear: left;
+	border: 10px solid black;
+}
+
+.buttons ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+}
+
+.buttons li{
+	float: left;
+}
+
+.buttons li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 7px 16px;
+    text-decoration: none;
+}
+
+.buttons li a:hover:not(.active) {
+    background-color: grey;
+}
+
+.active {
+    background-color: rgb(0,0,255);
+}
+   
+ </style>
   
   
   
