--- a/html/navBar.html
+++ b/html/navBar.html
@@ -1,5 +1,36 @@
+<style>
+ul{
+    clear: left;
+	border: 10px solid black;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+}
 
-<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
+li{
+	float: left;
+}
+
+    li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 7px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: grey;
+}
+
+.active {
+    background-color: rgb(0,0,255);
+}
+   
+ </style>
+
 <ul>
     <li><a class="active" href="index">Home</a></li>
     <li><a href="html/about">About</a></li>
