--- a/html/welcome.html
+++ b/html/welcome.html
@@ -12,7 +12,7 @@
 <body>
   
   
-  <h1>Devin Joseph Durham<h1>
+  <h1>Devin JosephQ Durham<h1>
   <h4>Computer Scientist / Academic / Film & Arts Enthusiast / Explorer<h4>
   <h7>"Empower your colleagues and change the world"<h7>
     
