--- a/html/archive.html
+++ b/html/archive.html
@@ -2,7 +2,22 @@
 <html>
 <head>
     <title>Devin Durham Archive & Logs</title>
-    
+	
+	<style>
+		body h2{
+			text-decoration: underline;
+		}
+			
+		archives{
+	        	width: 49%;
+		}
+	    
+	    	logs{
+	    		width: 49%;
+	    	}
+  	</style>
+	
+	
 </head>
 
 <body>
