--- a/html/navBar.html
+++ b/html/navBar.html
@@ -1,7 +1,8 @@
 <style>
 ul{
     clear: left;
-	border: 10px solid black;
+    font-family: Helvetica;	
+    border: 10px solid black;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -33,10 +34,10 @@ li a:hover:not(.active) {
 
 <ul>
     <li><a class="active" href="index">Home</a></li>
-    <li><a href="html/about">About</a></li>
-    <li><a href="html/resume">Resume</a></li>
-    <li><a href="html/projects">Projects</a></li>
-    <li><a href="html/posts">Posts</a></li>
-    <li><a href="html/media">Media</a></li>
-    <li><a href="html/contact">Contact</a></li>
+    <li><a href="../html/about">About</a></li>
+    <li><a href="../html/resume">Resume</a></li>
+    <li><a href="../html/projects">Projects</a></li>
+    <li><a href="../html/posts">Posts</a></li>
+    <li><a href="../html/media">Media</a></li>
+    <li><a href="../html/contact">Contact</a></li>
 </ul>
