--- a/html/welcome.html
+++ b/html/welcome.html
@@ -7,11 +7,13 @@
 </head>
 <body>	
 
+	div class="welcomePic">
+		<img src="../media/pictures/IMG_20170609_030421 (3).jpg">
+	</div>
 	
 <div class="boxed">
 	
 		<div class = "top">
-			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
 			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist / Academic / Film & Arts Enthusiast / Explorer</h3>
 			<h4> "Empower your colleagues and change the world"</h4>
