--- a/html/archive.html
+++ b/html/archive.html
@@ -10,10 +10,14 @@
 			
 		archives{
 	        	width: 49%;
+			margin: auto;
+			border: 10px solid black;
 		}
 	    
 	    	logs{
 	    		width: 49%;
+			margin: auto;
+			border: 10px solid black;
 	    	}
   	</style>
 	
