--- a/html/welcome.html
+++ b/html/welcome.html
@@ -7,7 +7,7 @@
 </head>
 <body>	
 
-	div class="welcomePic">
+	<div class="welcomePic">
 		<img src="../media/pictures/IMG_20170609_030421 (3).jpg">
 	</div>
 	
