--- a/html/archive.html
+++ b/html/archive.html
@@ -8,13 +8,13 @@
 			text-decoration: underline;
 		}
 			
-		archives{
+		.archives{
 	        	width: 49%;
 			margin: auto;
 			border: 10px solid black;
 		}
 	    
-	    	logs{
+	    	.logs{
 	    		width: 49%;
 			margin: auto;
 			border: 10px solid black;
