--- a/html/archive.html
+++ b/html/archive.html
@@ -10,13 +10,13 @@
 			
 		.archives{
 	        	width: 49%;
-			margin: auto;
+			margin: 0;
 			border: 10px solid black;
 		}
 	    
 	    	.logs{
 	    		width: 49%;
-			margin: auto;
+			margin: 0;
 			border: 10px solid black;
 	    	}
   	</style>
