--- a/html/archive.html
+++ b/html/archive.html
@@ -13,6 +13,8 @@
 			margin: 0;
 			padding: 1%;
 			border: 5px solid black;
+			overflow:hidden;
+			float: left;
 		}
 	    
 	    	.logs{
@@ -20,6 +22,8 @@
 			margin: 0;
 			padding: 1%;
 			border: 5px solid black;
+			overflow:hidden;
+			float: left;
 	    	}
   	</style>
 	
