--- a/html/welcome.html
+++ b/html/welcome.html
@@ -3,7 +3,7 @@
     <script src="https://www.w3schools.com/lib/w3.js"></script>
 <head>
 	<title>Devin Durham</title>
-	 <link rel="stylesheet" type="text/css" href="CSS/index.css"/>
+	 <link rel="stylesheet" type="text/css" href="../CSS/index.css"/>
 </head>
 <body>	
 
