--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<script src="https://www.w3schools.com/lib/w3.js"></script>
 <head>
     <title>Devin Durham</title>
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
@@ -24,18 +25,15 @@
 		</div>
 			
 			
-        <div class="buttons">
-            <ul>
-                <li><a class="active" href="index">Home</a></li>
-            	<li><a href="html/about">About</a></li>
-            	<li><a href="html/resume">Resume</a></li>
-            	<li><a href="html/projects">Projects</a></li>
-            	<li><a href="html/posts">Posts</a></li>
-            	<li><a href="html/media">Media</a></li>
-            	<li><a href="html/contact">Contact</a></li>
-            </ul>
-        </div>
-	</div>
+   
+        <div w3-include-html="navBar.html"></div> 
+			
+	<script>
+  			  w3.includeHTML();
+  	</script>
+	
+	
+	
 	
 	<div class = "SubBoxes">
 
