--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<div class = "top">
 			<img src="media/picBW (3).jpg" height=10% width=10% align = "left">
-			<h1>  DevinQ Joseph Durham</h1>
+			<h1>  Devin JosephQ Durham</h1>
 			<h3>  Computer Scientist / Academic / Film & Arts Enthusiast / Explorer</h3>
 			<h4> "Empower your colleagues and change the world"</h4>
 			
@@ -25,7 +25,7 @@
 	
 	<div class = "SubBoxes">
 		
-		  <div w3-include-html="navBar.html"></div> 
+		  <div w3-include-html="../html/navBar.html"></div> 
 			
 	<script>
   			  w3.includeHTML();
