--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>	
 
 		<div class = "top">
-			<img src="media/picBW (3).jpg" height=10% width=10% align = "left">
+			<img src="media/picBW (3).jpg">
 			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist / Academic / Film & Arts Enthusiast / Explorer</h3>
 			<h4> "Empower your colleagues and change the world"</h4>
