--- a/html/navBar.html
+++ b/html/navBar.html
@@ -1,5 +1,5 @@
 <style>
-ul{
+navy> ul{
     clear: left;
     font-family: Helvetica;	
     border: 10px solid black;
@@ -10,11 +10,11 @@ ul{
     background-color: black;
 }
 
-li{
+.navy>li{
 	float: left;
 }
 
-    li a {
+    .navy>li a {
     display: block;
     color: white;
     text-align: center;
@@ -22,7 +22,7 @@ li{
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+.navy>li a:hover:not(.active) {
     background-color: grey;
 }
 
@@ -31,6 +31,8 @@ li a:hover:not(.active) {
 }
    
  </style>
+
+<dic class = "navy">
 
 <ul>
     <li><a class="active" href="index">Home</a></li>
@@ -41,3 +43,4 @@ li a:hover:not(.active) {
     <li><a href="../html/media">Media</a></li>
     <li><a href="../html/contact">Contact</a></li>
 </ul>
+</div>
