--- a/html/navBar.html
+++ b/html/navBar.html
@@ -32,7 +32,7 @@ navy> ul{
    
  </style>
 
-<dic class = "navy">
+<div class = "navy">
 
 <ul>
     <li><a class="active" href="index">Home</a></li>
