--- a/html/navBar.html
+++ b/html/navBar.html
@@ -10,7 +10,7 @@ navy> ul{
     background-color: black;
 }
 
-.navy>li{
+li{
 	float: left;
 }
 
@@ -22,7 +22,7 @@ navy> ul{
     text-decoration: none;
 }
 
-.navy>li a:hover:not(.active) {
+li a:hover:not(.active) {
     background-color: grey;
 }
 
@@ -32,7 +32,7 @@ navy> ul{
    
  </style>
 
-<div class = "navy">
+
 
 <ul>
     <li><a class="active" href="index">Home</a></li>
@@ -43,4 +43,4 @@ navy> ul{
     <li><a href="../html/media">Media</a></li>
     <li><a href="../html/contact">Contact</a></li>
 </ul>
-</div>
+
