--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="header">
 		<div class = "top">
 			<img id="pic" src="media/picBW (3).jpg">
-			<h1>  DevinQ Joseph Durham</h1>
+			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist / Academic / Film & Arts Enthusiast / Explorer</h3>
 			<h4> "Empower your colleagues and change the world"</h4>
 			
@@ -23,18 +23,6 @@
   			  w3.includeHTML();
   		</script>
       
-<script>
-var right=document.getElementById('header').style.height;
-var left=document.getElementById('pic').style.height;
-if(left>right)
-{
-    document.getElementById('header').style.height=left;
-}
-else
-{
-    document.getElementById('pic').style.height=right;
-}
-</script>
 	
 	
 	<div class = "SubBoxes">
