--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="header">
 		<div class = "top">
 			<img id="pic" src="media/picBW (3).jpg">
-			<h1>  Devin Joseph Durham</h1>
+			<h1>  Devin QJoseph Durham</h1>
 			<h3>  Computer Scientist / Academic / Film & Arts Enthusiast / Explorer</h3>
 			<h4> "Empower your colleagues and change the world"</h4>
 			
