--- a/html/test.html
+++ b/html/test.html
@@ -7,7 +7,7 @@
       <script src="jquery.js"></script> 
       <script> 
     $(function(){
-      $("#includedContent").load("HTML/CustomElements/NavBar.html"); 
+      $("#includedContent").load("../html/navBar.html"); 
     });
     </script> 
       
